--- a/index.html
+++ b/index.html
@@ -15,32 +15,32 @@
         <main>
             <div class="col">
                 <h4>Do you <span class="emphasis"><em>ENJOY</em></span> heavy snowfalls?</h4>
-                <img class="info-img" src="IMG/fsj-snow3.webp" alt="A car barely visible, stuck in a giant snowpile.">
+                <img class="info-img" src="./IMG/fsj-snow3.webp" alt="A car barely visible, stuck in a giant snowpile.">
                 <p>Well, you've come to the right place. It snows in September, and <strong>doesn't fully disappear until April.</strong> We get over 900mm of snow per year, and close to 100 days of snowfall!</p>
             </div>
             <div class="col">
                 <h4>Do you <span class="emphasis"><em>FEAR</em></span> the murderous Moose?</h4>
-                <img class="info-img" src="IMG/moose.jpeg" alt="A majestic moose, sitting in tall grass, his giant size cleaerly visible. Beautiful creatures!">
+                <img class="info-img" src="./IMG/moose.jpeg" alt="A majestic moose, sitting in tall grass, his giant size cleaerly visible. Beautiful creatures!">
                 <p>You should. Travel advisory: he is <strong>exceedingly grumpy</strong> until he's eaten his daily portion of Curious Tourists!... but geez, is he ever majestic</p>
             </div>
             <div class="col">
                 <h4>Do you <span class="emphasis"><em>TOLERATE</em></span> chain restaurants?</h4>
-                <img class="info-img" src="IMG/browns.jpg" alt="Two happy waitresses hugging outside the local chain restuarant, Brown's Social House.">
+                <img class="info-img" src="./IMG/browns.jpg" alt="Two happy waitresses hugging outside the local chain restuarant, Brown's Social House.">
                 <p>What a relief! Because that's all we have! If you enjoy <strong>overpriced (yet delicious) nachos</strong>, FSJ may just be the place for you.</p>
             </div>
             <div class="col col-bottom">
                 <h4>Do you <span class="emphasis"><em>WORK</em></span> in the Oil industry?</h4>
-                <img class="info-img" src="IMG/oil-and-gas.jpg" alt="A car barely visible, stuck in a giant snowpile.">
+                <img class="info-img" src="./IMG/oil-and-gas.jpg" alt="A car barely visible, stuck in a giant snowpile.">
                 <p><strong>You'll learn to!</strong> You don't have a choice, that's all there is to do! Don't worry, ethical questions aside, it pays <strong><em>very</em></strong> well.</p>
             </div>
             <div class="col col-bottom">
                 <h4>Do you <span class="emphasis"><em>LISTEN</em></span> to country music?</h4>
-                <img class="info-img" src="IMG/country.jpg" alt="A country/western concert crowd cheering as the artists perform unstage. Artists unknown.">
+                <img class="info-img" src="./IMG/country.jpg" alt="A country/western concert crowd cheering as the artists perform unstage. Artists unknown.">
                 <p>We don't actually have much live music, but you will hear country <strong>everywhere, for the rest of your life, all day, always.</strong> Kinda grows on ya after a while! I genuinely love Zach Bryan now and I'm <strong><em>not</em></strong> ashamed.</p>
             </div>
             <div class="col col-bottom">
                 <h4>You will <span class="emphasis"><em>LOVE</em></span> the Northern Lights. </h4>
-                <img class="info-img" src="IMG/northern-lights.jpg" alt="The northern lights waving in the night sky, purple, green, shades of pink, rippling on a black canvas. Stunning!">
+                <img class="info-img" src="./IMG/northern-lights.jpg" alt="The northern lights waving in the night sky, purple, green, shades of pink, rippling on a black canvas. Stunning!">
                 <p>Joking aside, there are some <strong>stunningly</strong> beautiful sights in Northern Canada. The people are kind and it is well worth a trip! Head a little farther north and check out the Yukon while you're there. ... just, <strong><em>maybe go in the summer time?</em></strong></p>
             </div>
         </main>
